--- a/userServive.html
+++ b/userServive.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
- 
-    <button>Gangs</button>
-    <button>Added online in boos branch</button
-    <button>Third</button>
+ <button>Boss but</button>
     <h5>Just added you</h5>
 </body>
 </html>
