added third offline

--- a/userServive.html
+++ b/userServive.html
@@ -8,6 +8,7 @@
 <body>
  
     <button>Gangs</button>
+    <button>third off line</button>
     <button>Third</button>
     <h5>Just added you</h5>
 </body>
