--- a/userServive.html
+++ b/userServive.html
@@ -9,7 +9,7 @@
  
     <button>Gangs</button>
 
-    <button>Added online in boos branch</button
+    <button>Added online in boos branch</button>
 
     <button>Third ONLIN JUST ADDED</button>
     <h5>Just added you</h5>
